[package]
name = "bp-pp"
version = "0.1.0"
edition = "2021"
authors = ["Oleg Fomenko <oleg.fomenko@distributedlab.com>"]
license = "MIT"
description = "Rust library for Bulletproofs++ - range-proof protocol in discret loggarithm setting"
repository = "https://github.com/distributed-lab/bp-pp"
categories = ["cryptography"]
keywords = ["crypto", "bulletproofs", "rangeproofs", "zeroknowledge", "zkp"]
readme = "README.md"

[features]
default = [ "serde" ]
serde = ["dep:serde_json", "dep:serde"]

[dependencies]
k256 = { version = "0.13.3", features = ["serde"] }
sha2 = "0.10.8"
merlin = "3.0.0"

serde = { version = "1.0.197", features = ["derive"], optional = true }
serde_json = { version = "1.0.114", optional = true }
